feat: Add Common2 Reference

--- a/src/rmnd-metro.csproj
+++ b/src/rmnd-metro.csproj
@@ -30,4 +30,7 @@
   <ItemGroup>
     <AvaloniaResource Include="**/*.xaml" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\rmnd-common2\src\rmnd-common2.csproj" />
+  </ItemGroup>
 </Project>
